@@ -53,8 +53,8 @@ BIND 9
 
 BIND 9.9.10-P1
 
-        This version contains a fix for the security flaw
-        disclosed in CVE-2017-3140.
+        This version contains a fix for the security flaws
+        disclosed in CVE-2017-3140 and CVE-2017-3141.
 
 BIND 9.9.10
 	
