@@ -24,8 +24,8 @@
       This document summarizes changes since BIND 9.9.10:
     </para>
     <para>
-      BIND 9.9.10-P1 addresses the security issue described in
-      CVE-2017-3140.
+      BIND 9.9.10-P1 addresses the security issues described in
+      CVE-2017-3140 and CVE-2017-3141.
     </para>
 
   </section>
@@ -72,6 +72,13 @@
 
   <section xml:id="relnotes_security"><info><title>Security Fixes</title></info>
     <itemizedlist>
+      <listitem>
+	<para>
+	  The BIND installer on Windows used an unquoted service path,
+	  which can enable privilege escalation. This flaw is disclosed
+	  in CVE-2017-3141. [RT #45229]
+	</para>
+      </listitem>
       <listitem>
 	<para>
 	  With certain RPZ configurations, a response with TTL 0
